cd/myshinyapp_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myshiny-app-db
  namespace: myshiny-app
spec:
  selector:
    matchLabels:
      app: myshiny-app-db
      env: prod
  serviceName: myshiny-app-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: myshiny-app-db
        env: prod
    spec:
      containers:
        - name: myshiny-app-db
          image: postgres
          volumeMounts:
            - name: myshiny-app-db-pvc
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: myshiny-app-db-pvc
        labels:
          app: myshiny-app-db
          env: prod
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "fast"
        resources:
          requests:
            storage: 1Gi
