cd/myshinyapp-fe-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myshiny-app-fe-service
  namespace: myshiny-app
  labels:
    app: myshiny-app-fe
    env: prod
spec:
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 30080
  selector:
    app: myshiny-app-fe
    env: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshiny-app-fe
  namespace: myshiny-app
  labels:
    app: myshiny-app-fe
    env: prod
  annotations:
    backup.velero.io/backup-volumes: myshiny-app-fe-pv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshiny-app-fe
      env: prod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: myshiny-app-fe
        env: prod
    spec:
      containers:
        - name: myshiny-app-fe
          image: drupal:latest
          ports:
          - containerPort: 30080
          volumeMounts:
            - name: myshiny-app-fe-pv
              mountPath: /var/www/html/modules
              subPath: modules
            - name: myshiny-app-fe-pv
              mountPath: /var/www/html/profiles
              subPath: profiles
            - name: myshiny-app-fe-pv
              mountPath: /var/www/html/themes
              subPath: themes
            - name: myshiny-app-fe-pv
              mountPath: /var/www/html/sites
              subPath: sites
      volumes:
        - name: myshiny-app-fe-pv
          persistentVolumeClaim:
            claimName: myshiny-app-fe-pvc
